<resources>
    <string name="default_client_id">700341727820-tgio1e98t8dbjrbktgmomsb59tpr2clk.apps.googleusercontent.com</string>
    <string name="app_name">EP-Handle</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bluetooth_state_not_available">No disponible</string>
    <string name="bluetooth_state_connected">Conectado</string>
    <string name="bluetooth_state_not_connected">No conectado</string>
    <string name="bluetooth_state_turning_off">Apagando</string>
    <string name="bluetooth_state_available">Disponible</string>
    <string name="bluetooth_state_turning_on">Encendiendo</string>
    <string name="bluetooth_state_error">Error de bluetooth</string>
    <string name="about_register_date_not_found">No registrado</string>
    <string name="login_title">EP-Handle</string>
    <string name="login_input_email">Email</string>
    <string name="login_input_pass">Password</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="login_button_g">Iniciar sesión con Google</string>
    <string name="login_legal">EP-Handle 2019 v1.0</string>
    <string name="main_title">¡Bienvenid@ de nuevo!</string>
    <string name="main_tag1">Estado Bluetooth:</string>
    <string name="main_tag2">Nombre dispositivo:</string>
    <string name="main_bluetooth_state_default">No conectado</string>
    <string name="main_device_name_default">EP-0000</string>
    <string name="main_tag3">Dia:</string>
    <string name="main_tag4">Sesiones Realizadas:</string>
    <string name="default_number">0</string>
    <string name="main_tag5">Objetivo:</string>
    <string name="main_lets_start">¿Empezamos?</string>
    <string name="main_button">Empezar</string>
    <string name="main_set_time">Fijar tiempo</string>
    <string name="main_minutes">min.</string>
    <string name="tv_pref_title_avisos">Avisos</string>
    <string name="tv_pref_subtitle_vib">Vibración</string>
    <string name="checkbox_enabled">Activado</string>
    <string name="tv_pref_intensity">Intensidad</string>
    <string name="tv_pref_subtitle_sound">Sonido</string>
    <string name="tv_pref_vol">Volumen</string>
    <string name="tv_pref_subtitle_ilum">Iluminación</string>
    <string name="tv_pref_intensidad">Intensidad</string>
    <string name="tv_pref_title_notif">Notificaciones</string>
    <string name="tv_pref_subtitle_notif">Notificaciones en la bandeja:</string>
    <string name="menu_item_therapist">Mi Terapeuta</string>
    <string name="menu_item_device">Dispositivo</string>
    <string name="menu_item_config">Configuración</string>
    <string name="menu_item_about">Acerca de...</string>
    <string name="menu_item_logout">Cerrar Sesión</string>
    <string name="menu_item_exit">Salir</string>
    <string name="tv_about_tag1">EP-Handle v1.0</string>
    <string name="tv_about_tag2">App id:</string>
    <string name="tv_about_tag3">Licencia de uso:</string>
    <string name="tv_about_tag4">Fecha de registro:</string>
    <string name="tv_about_mensaje_desarrollador">Esta aplicación es el proyecto final del alumno Jorge Blasco Espinosa para el centro IES Severo Ochoa</string>
    <string name="bn_about_return">Volver</string>
    <string name="tv_about_device">Dispositivo asociado:</string>
    <string name="logo_content_description">Logo de EP-Handle</string>
    <string name="bn_reset">Restablecer</string>
    <string name="dialog_no_bt_title">Bluetooth no disponible</string>
    <string name="dialog_no_bt_message">El bluetooth no está disponible en este dispositivo, por favor, inténtalo con otro dispositivo.</string>
    <string name="bn_search_devices">Buscar dispositivos</string>
    <string name="tv_dispositivo_disponibles">Dispositivos disponibles:</string>
    <string name="bn_search_devices_stop">Detener búsqueda</string>
    <string name="tv_session_vib">Vibración</string>
    <string name="tv_session_alerts">Avisos</string>
    <string name="tv_session_sound">Sonido</string>
    <string name="tv_session_light">Iluminación</string>
    <string name="tv_session_tag1">Tiempo Objetivo:</string>
    <string name="tv_session_tag2">Tiempo transcurrido:</string>
    <string name="bn_session_pause">Pausar</string>
    <string name="bn_session_stop">Detener</string>
    <string name="bn_session_play">Continuar</string>
    <string name="snackbar_device_not_compatible">Dispositivo no compatible</string>
</resources>
