<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferencesActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_config"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_config" />

    <TextView
        android:id="@+id/tv_pref_title_avisos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_pref_title_avisos"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_pref_subtitle_vib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_pref_subtitle_vib"
        app:layout_constraintStart_toStartOf="@+id/tv_pref_title_avisos"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <CheckBox
        android:id="@+id/cb_pref_vib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/checkbox_enabled"
        app:layout_constraintStart_toStartOf="@+id/tv_pref_subtitle_vib"
        app:layout_constraintTop_toBottomOf="@+id/tv_pref_subtitle_vib" />

    <TextView
        android:id="@+id/tv_pref_intensity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_pref_intensity"
        app:layout_constraintStart_toStartOf="@+id/tv_pref_subtitle_vib"
        app:layout_constraintTop_toBottomOf="@+id/cb_pref_vib" />

    <SeekBar
        android:id="@+id/sb_pref_intensity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pref_intensity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_pref_intensity"
        app:layout_constraintTop_toTopOf="@+id/tv_pref_intensity" />

    <TextView
        android:id="@+id/tv_pref_subtitle_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_pref_subtitle_sound"
        app:layout_constraintStart_toStartOf="@+id/tv_pref_subtitle_vib"
        app:layout_constraintTop_toBottomOf="@+id/sb_pref_intensity" />

    <CheckBox
        android:id="@+id/cb_pref_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/checkbox_enabled"
        app:layout_constraintStart_toStartOf="@+id/tv_pref_subtitle_sound"
        app:layout_constraintTop_toBottomOf="@+id/tv_pref_subtitle_sound" />

    <TextView
        android:id="@+id/tv_pref_vol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_pref_vol"
        app:layout_constraintStart_toStartOf="@+id/cb_pref_sound"
        app:layout_constraintTop_toBottomOf="@+id/cb_pref_sound" />

    <SeekBar
        android:id="@+id/sb_pref_vol"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pref_vol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_pref_vol"
        app:layout_constraintTop_toTopOf="@+id/tv_pref_vol" />

    <TextView
        android:id="@+id/tv_pref_subtitle_iluminacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_pref_subtitle_ilum"
        app:layout_constraintStart_toStartOf="@+id/tv_pref_subtitle_sound"
        app:layout_constraintTop_toBottomOf="@+id/tv_pref_vol" />

    <CheckBox
        android:id="@+id/cb_pref_ilum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/checkbox_enabled"
        app:layout_constraintStart_toStartOf="@+id/tv_pref_subtitle_iluminacion"
        app:layout_constraintTop_toBottomOf="@+id/tv_pref_subtitle_iluminacion" />

    <TextView
        android:id="@+id/tv_pref_intensidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_pref_intensidad"
        app:layout_constraintStart_toStartOf="@+id/cb_pref_ilum"
        app:layout_constraintTop_toBottomOf="@+id/cb_pref_ilum" />

    <SeekBar
        android:id="@+id/sb_pref_intensidad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pref_intensidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_pref_intensidad"
        app:layout_constraintTop_toTopOf="@+id/tv_pref_intensidad" />

    <View
        android:id="@+id/view6"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pref_intensidad" />

    <TextView
        android:id="@+id/tv_pref_title_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_pref_title_notif"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintStart_toStartOf="@+id/view6" />

    <TextView
        android:id="@+id/tv_pref_subtitle_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_pref_subtitle_notif"
        app:layout_constraintStart_toStartOf="@+id/tv_pref_title_notifications"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <CheckBox
        android:id="@+id/cb_pref_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/checkbox_enabled"
        app:layout_constraintStart_toStartOf="@+id/tv_pref_subtitle_notifications"
        app:layout_constraintTop_toBottomOf="@+id/tv_pref_subtitle_notifications" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bn_pref_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="#00000000"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

</android.support.constraint.ConstraintLayout>